Config to make things look better

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 #layout: page
+name: yaaun # Musi być, bo inaczej pojawia się zdwojony tytuł.
 title: null # "yaaun’s github page"
 theme: minima
 titles_from_heading:
